2008-10-05  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (distclean-local): Remove IcedTeaPlugin object file.

2008-10-03  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/build/linux/makefiles/shark.make:
	Work around some GCC optimizer failures.

2008-10-01     Deepak Bhole <dbhole@redhat.com>
	* .hgignore: Removed IcedTeaPlugin.jar
	* IcedTeaPlugin.cc: Updated classpath when launching Java. added
	checks to detect error on Java side.
	* Makefile.am: Updated to fit new refactored files.
	* plugin/icedtea/sun/applet/AppletSecurityContextManager.java: New
	file, moved out of org/classpath/icedtea/plugin/, as a result of
	refactoring.
	* plugin/icedtea/sun/applet/PluginCallRequestFactory.java: Same.
	* plugin/icedtea/sun/applet/PluginStreamHandler.java: Same.
	* plugin/icedtea/sun/applet/GetMemberPluginCallRequest.java: Same.
	* plugin/icedtea/sun/applet/GetWindowPluginCallRequest.java: Same.
	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java: Same.
	* plugin/icedtea/sun/applet/PluginMain.java: Same.
	* plugin/icedtea/sun/applet/PluginMessageConsumer.java: Same.
	* plugin/icedtea/sun/applet/PluginMessageHandlerWorker.java: Same.
	* plugin/icedtea/sun/applet/PluginObjectStore.java: Same.
	* plugin/icedtea/sun/applet/RequestQueue.java: Same.
	* plugin/icedtea/sun/applet/TestEnv.java: Same.
	* plugin/icedtea/sun/applet/VoidPluginCallRequest.java: Same.
	* plugin/icedtea/org/classpath/icedtea/plugin/GetMemberPluginCallRequest.java: 
	Removed, as a result of refactoring.
	* plugin/icedtea/org/classpath/icedtea/plugin/GetWindowPluginCallRequest.java:
	Same.
	* plugin/icedtea/org/classpath/icedtea/plugin/PluginAppletSecurityContext.java:
	Same.
	* plugin/icedtea/org/classpath/icedtea/plugin/PluginCallRequestFactoryImpl.java:
	Same.
	* plugin/icedtea/org/classpath/icedtea/plugin/PluginMain.java: Same.
	* plugin/icedtea/org/classpath/icedtea/plugin/PluginMessageConsumer.java:
	Same.